# tree-sitter-roll20-script

./: .gitignore  Cargo.toml  README.md  binding.gyp  grammar.js  grammar1.js  grammar2.js  index.js  package-lock.json  package.json  parser.exp  parser.lib
bindings/node/: index.js
bindings/rust/: lib.rs
corpus/: _rollTemplates.txt  abilities.txt  abilities2.txt  abilities_invalid.txt  attributes.txt  attributes2.txt  attributes_invalid.txt  diceRolls.txt  diceRolls2.txt  diceRolls_invalid.txt  groupedRolls.txt  inlineRolls.txt  inlineRolls2.txt  inlineRolls_invalid.txt  macros.txt  macros2.txt  macros_invalid.txt  mathFunctions.txt  mathFunctions2.txt  mathFunctions_invalid.txt  numbers.txt  numbers2.txt  numbers_invalid.txt  parenthesized.txt  parenthesized2.txt  parenthesized_invalid.txt  rollCommands.txt  rollQueries.txt  rollTemplates.txt  tableRolls.txt  test.txt
corpus - on hold/: abilities_invalid.txt  attributes_invalid.txt  diceRolls.txt  diceRolls_invalid.txt  inlineRolls.txt  inlineRolls_invalid.txt  macros_invalid.txt  mathFunctions.txt  mathFunctions_invalid.txt  numbers.txt  numbers_invalid.txt  parenthesized.txt  parenthesized_invalid.txt  rollQueries.txt  tableRolls.txt  tableRolls_invalid.txt
saved corpus/: abilities.txt  attributes.txt  diceRolls.txt  inlineRolls.txt  macros.txt  rollQueries.txt  tableRolls.txt
src/: binding.cc  grammar.json  node-types.json  parser.c  scanner(test).cc  scanner.c  scanner.cc  scanner2.cc
test/: test.roll20  test2.roll20
