[package]
name = "tree-sitter-roll20-script"
description = "roll20-script grammar for the tree-sitter parsing library"
version = "0.1.0"
keywords = ["incremental", "parsing", "roll20"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-roll20-script"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20"

[build-dependencies]
cc = "1.0"
