[package]
name = "tree-sitter-roll20-script"
description = "Tree-sitter parser for Roll20 scripts"
version = "1.0.1"
keywords = [
  "roll20",
  "macro",
  "parser",
  "lexer",
  "grammar"
]
categories = ["parsing", "text-editors"]
repository = "https://github.com/wizard04wsu/tree-sitter-roll20-script"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20"

[build-dependencies]
cc = "1.0"
